--- a/ui/layout/上中下.html
+++ b/ui/layout/上中下.html
@@ -3,85 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>1列自适应高度、宽度</title>
-
-<style>
-body {
-	font-family: 'Verdana', '宋体';
-	font-size: 12PX;
-	margin: 0;
-	padding: 0;
-	min-height: 100%;
-	height: 100%;
-	width: 100%;
-	overflow: hidden;
-}
-
-.layout {
-	width: 100%;
-	height: 100%;
-}
-
-.top {
-	height: 10%;
-	width: 100%;
-}
-
-.bottom {
-	height: 10%;
-	width: 100%;
-}
-
-.main {
-	height: 80%; /*根据 top和bottom的高度得到*/
-	width: 100%;
-}
-
-.center {
-	margin: 0 !important;
-	height: 100%;
-}
-
-.bar {
-	margin: 0 auto;
-	height: 5px;
-	width: 100%;
-	background: #99CCFF;
-}
-
-.barleft {
-	float: left;
-}
-
-.barcenter {
-	margin: 0 !important;
-	margin: 0;
-}
-
-.barright {
-	float: right;
-	width: 40px;
-}
-
-.panel {
-	height: 100%;
-	width: 100%;
-}
-
-.panelmain {
-	height: 98%;
-	width: 100%;
-	overflow: auto;
-}
-</style>
-
+<link href="layout.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-
-
 	<div class="layout">
-		
-	<div class="top">top</div>
+
+		<div class="top">top</div>
 
 		<div class="main">
 			<div class="center">
@@ -199,8 +126,8 @@ body {
 				<!--  -->
 			</div>
 		</div>
-		
-	<div class="bottom" >bottom</div>
+
+		<div class="bottom">bottom</div>
 
 	</div>
 
