--- a/ui/layout/上中下.html
+++ b/ui/layout/上中下.html
@@ -21,9 +21,9 @@
 							<div class="bar">
 								<div class="barleft">.::标题</div>
 								<div class="barright" align="right">
-									<span style="margin: 1px;" onclick="alert('最小化')">-</span> <span
-										style="margin: 1px;" onclick="alert('最大化')">+</span> <span
-										style="margin: 1px;" onclick="alert('关闭')">X</span>
+									<input type="button"  class="btn01" onmouseover="this.className='btn0101'" onmouseout="this.className='btn01'" value="-"/>
+									<input type="button"  class="btn01" onmouseover="this.className='btn0101'" onmouseout="this.className='btn01'" value="+"/>
+									<input type="button"  class="btn01" onmouseover="this.className='btn0101'" onmouseout="this.className='btn01'" value="X"/>
 								</div>
 								<div class="barcenter">..</div>
 							</div>
