--- a/ui/layout/上中下.html
+++ b/ui/layout/上中下.html
@@ -21,9 +21,15 @@
 							<div class="bar">
 								<div class="barleft">.::标题</div>
 								<div class="barright" align="right">
-									<input type="button"  class="btn01" onmouseover="this.className='btn0101'" onmouseout="this.className='btn01'" value="-"/>
-									<input type="button"  class="btn01" onmouseover="this.className='btn0101'" onmouseout="this.className='btn01'" value="+"/>
-									<input type="button"  class="btn01" onmouseover="this.className='btn0101'" onmouseout="this.className='btn01'" value="X"/>
+									<input type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="-" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="+" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="X" />
 								</div>
 								<div class="barcenter">..</div>
 							</div>
@@ -128,9 +134,6 @@
 		</div>
 
 		<div class="bottom">bottom</div>
-
 	</div>
-
-
 </body>
 </html>
