--- a/ui/layout/左中右.html
+++ b/ui/layout/左中右.html
@@ -5,39 +5,77 @@
 <title>3列左右侧固定，中间列自适应居中</title>
 <link href="layout.css" rel="stylesheet" type="text/css" />
 
-<style>
-
-body {
-	font-family: 'Verdana', '宋体';
-	font-size: 12PX;
-	margin: 0;
-	padding: 0;
-	min-height: 100%;
-	height: 100%;
-	width: 100%;
-	overflow: auto;
-}
-
-
-.layout {width:100%; height:100%; background:#9c6;}
-.center { margin:0 !important; height:100%;  background:#ffa;}
-.left {  float:left; width:20%; height:100%; background:#FF00CC;}
-.right { float:right; width:20%; height:100%; background:#00FF66;}
-
-.main { height:100%;width:100%;}<!-- 根据 top和bottom的高度得到 -->
-
-</style>
-
 </head>
 
 <body>
-<div class="layout">
+	<div class="layout">
 
-	<div class="main">	
-	  <div class="left">left</div>		
-	  <div class="right">right</div>
-	  <div class="center">center</div>
+		<div class="main" style="height: 100%;">
+			<div class="left">
+
+				<!--  -->
+				<div class="panel">
+					<div class="bar">
+						<div class="barleft">.::标题</div>
+						<div class="barright" align="right">
+							<span style="margin: 1px;" onclick="alert('最小化')">-</span> <span
+								style="margin: 1px;" onclick="alert('最大化')">+</span> <span
+								style="margin: 1px;" onclick="alert('关闭')">X</span>
+						</div>
+						<div class="barcenter">..</div>
+					</div>
+					<div class="panelmain">
+						11111111111111111111111111111111111111111111111111111111111111111111111111111111111
+						1111111<br>11111111111111111111111111111111 1111111<br>
+								1111111<br> 1111111<br> 1111111<br> 1111111<br>
+					</div>
+				</div>
+				<!--  -->
+			</div>
+			<div class="right">
+
+				<!--  -->
+				<div class="panel">
+					<div class="bar">
+						<div class="barleft">.::标题</div>
+						<div class="barright" align="right">
+							<span style="margin: 1px;" onclick="alert('最小化')">-</span> <span
+								style="margin: 1px;" onclick="alert('最大化')">+</span> <span
+								style="margin: 1px;" onclick="alert('关闭')">X</span>
+						</div>
+						<div class="barcenter">..</div>
+					</div>
+					<div class="panelmain">
+						11111111111111111111111111111111111111111111111111111111111111111111111111111111111
+						1111111<br>11111111111111111111111111111111 1111111<br>
+								1111111<br> 1111111<br> 1111111<br> 1111111<br>
+					</div>
+				</div>
+				<!--  -->
+
+			</div>
+			<div class="center">
+
+				<!--  -->
+				<div class="panel">
+					<div class="bar">
+						<div class="barleft">.::标题</div>
+						<div class="barright" align="right">
+							<span style="margin: 1px;" onclick="alert('最小化')">-</span> <span
+								style="margin: 1px;" onclick="alert('最大化')">+</span> <span
+								style="margin: 1px;" onclick="alert('关闭')">X</span>
+						</div>
+						<div class="barcenter">..</div>
+					</div>
+					<div class="panelmain">
+						11111111111111111111111111111111111111111111111111111111111111111111111111111111111
+						1111111<br>11111111111111111111111111111111 1111111<br>
+								1111111<br> 1111111<br> 1111111<br> 1111111<br>
+					</div>
+				</div>
+				<!--  -->
+			</div>
+		</div>
 	</div>
-</div>
 </body>
 </html>
