--- a/ui/layout/上左中中下.html
+++ b/ui/layout/上左中中下.html
@@ -3,41 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>3列左右侧固定，中间列自适应居中+头部+尾部</title>
-
-<style>
-
-body {
-	font-family: 'Verdana', '宋体';
-	font-size: 12PX;
-	margin: 0;
-	padding: 0;
-	min-height: 100%;
-	height: 100%;
-	width: 100%;
-	overflow: hidden;
-}
-
-
-.layout {width:100%; height:100%; background:#9c6;}
-
-.left {  float:left; width:20%; height:100%; background:#FF00CC;}
-.right { float:right; width:20%; height:100%; background:#00FF66;}
-.center { margin:0 !important; height:100%;  background:#ffa;}
-
-
-
-.top { height:10%; width:100%; background:#3366CC;}
-.bottom { height:10%;width:100%; background:#339900;}
-.main {  height:80%;width:100%;}<!-- 根据 top和bottom的高度得到 -->
-
-
-
-
-
-</style>
-
-
-
+<link href="layout.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -46,19 +12,148 @@ body {
 <div class="layout">
 
 
-<div class="top">top</div>
+<div class="top">
+				<!--  -->
+				<div class="panel">
+					<div class="bar">
+						<div class="barleft">.::顶部</div>
+						<div class="barright" align="right">
+									<input type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="-" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="+" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="X" />
+								</div>
+						<div class="barcenter">..</div>
+					</div>
+					<div class="panelmain">
+						11111111111111111111111111111111111111111111111111111111111111111111111111111111111
+						1111111<br>11111111111111111111111111111111 1111111<br>
+								1111111<br> 1111111<br> 1111111<br> 1111111<br>
+					</div>
+				</div>
+				<!--  -->
+</div>
 
 <div class="main">
 
-	<div class="left">This is the sidebar</div>
+	<div class="left">
 
-	<div class="right">right</div>
+	<!--  -->
+	<div class="panel">
+		<div class="bar">
+			<div class="barleft">.::左部</div>
+			<div class="barright" align="right">
+									<input type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="-" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="+" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="X" />
+								</div>
+			<div class="barcenter">..</div>
+		</div>
+		<div class="panelmain">
+			11111111111111111111111111111111111111111111111111111111111111111111111111111111111
+			1111111<br>11111111111111111111111111111111 1111111<br>
+					1111111<br> 1111111<br> 1111111<br> 1111111<br>
+		</div>
+	</div>
+	<!--  -->
 
-	<div class="center">center</div>
+	</div>
+
+	<div class="right">
+	<!--  -->
+	<div class="panel">
+		<div class="bar">
+			<div class="barleft">.::右部</div>
+			<div class="barright" align="right">
+									<input type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="-" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="+" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="X" />
+								</div>
+			<div class="barcenter">..</div>
+		</div>
+		<div class="panelmain">
+			11111111111111111111111111111111111111111111111111111111111111111111111111111111111
+			1111111<br>11111111111111111111111111111111 1111111<br>
+					1111111<br> 1111111<br> 1111111<br> 1111111<br>
+		</div>
+	</div>
+	<!--  -->
+	</div>
+
+	<div class="center">
+	<!--  -->
+	<div class="panel">
+		<div class="bar">
+			<div class="barleft">.::中间</div>
+			<div class="barright" align="right">
+									<input type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="-" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="+" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="X" />
+								</div>
+			<div class="barcenter">..</div>
+		</div>
+		<div class="panelmain">
+			11111111111111111111111111111111111111111111111111111111111111111111111111111111111
+			1111111<br>11111111111111111111111111111111 1111111<br>
+					1111111<br> 1111111<br> 1111111<br> 1111111<br>
+		</div>
+	</div>
+	<!--  -->
+	</div>
 
 </div>
 
-<div class="bottom">bottom</div>
+<div class="bottom">
+
+<!--  -->
+<div class="panel">
+	<div class="bar">
+		<div class="barleft">.::底部</div>
+		<div class="barright" align="right">
+									<input type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="-" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="+" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="X" />
+								</div>
+		<div class="barcenter">..</div>
+	</div>
+	<div class="panelmain">
+		11111111111111111111111111111111111111111111111111111111111111111111111111111111111
+		1111111<br>11111111111111111111111111111111 1111111<br>
+				1111111<br> 1111111<br> 1111111<br> 1111111<br>
+	</div>
+</div>
+<!--  -->
+				
+</div>
 
 
 </div>
