--- a/ui/layout/左中右.html
+++ b/ui/layout/左中右.html
@@ -9,19 +9,23 @@
 
 <body>
 	<div class="layout">
-
 		<div class="main" style="height: 100%;">
 			<div class="left">
-
 				<!--  -->
 				<div class="panel">
 					<div class="bar">
 						<div class="barleft">.::标题</div>
 						<div class="barright" align="right">
-							<span style="margin: 1px;" onclick="alert('最小化')">-</span> <span
-								style="margin: 1px;" onclick="alert('最大化')">+</span> <span
-								style="margin: 1px;" onclick="alert('关闭')">X</span>
-						</div>
+									<input type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="-" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="+" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="X" />
+								</div>
 						<div class="barcenter">..</div>
 					</div>
 					<div class="panelmain">
@@ -33,16 +37,21 @@
 				<!--  -->
 			</div>
 			<div class="right">
-
 				<!--  -->
 				<div class="panel">
 					<div class="bar">
 						<div class="barleft">.::标题</div>
 						<div class="barright" align="right">
-							<span style="margin: 1px;" onclick="alert('最小化')">-</span> <span
-								style="margin: 1px;" onclick="alert('最大化')">+</span> <span
-								style="margin: 1px;" onclick="alert('关闭')">X</span>
-						</div>
+									<input type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="-" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="+" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="X" />
+								</div>
 						<div class="barcenter">..</div>
 					</div>
 					<div class="panelmain">
@@ -52,19 +61,23 @@
 					</div>
 				</div>
 				<!--  -->
-
 			</div>
 			<div class="center">
-
 				<!--  -->
 				<div class="panel">
 					<div class="bar">
 						<div class="barleft">.::标题</div>
 						<div class="barright" align="right">
-							<span style="margin: 1px;" onclick="alert('最小化')">-</span> <span
-								style="margin: 1px;" onclick="alert('最大化')">+</span> <span
-								style="margin: 1px;" onclick="alert('关闭')">X</span>
-						</div>
+									<input type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="-" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="+" /> <input
+										type="button" class="btn01"
+										onmouseover="this.className='btn0101'"
+										onmouseout="this.className='btn01'" value="X" />
+								</div>
 						<div class="barcenter">..</div>
 					</div>
 					<div class="panelmain">
