--- a/ui/layout/上中下2.html
+++ b/ui/layout/上中下2.html
@@ -5,6 +5,8 @@
 <title>1列自适应高度、宽度</title>
 <link href="reset.css" rel="stylesheet" type="text/css" />
 <link href="layout.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="../jquery-1.5.1.js"></script>
+<script type="text/javascript" src="../src/layout.js"></script>
 </head>
 <body>
 	<div class="layout">
