--- a/ui/layout/上中下2.html
+++ b/ui/layout/上中下2.html
@@ -77,5 +77,11 @@
 			<!--  -->
 		</div>
 	</div>
+	
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$('.layout').layout();
+		});
+	</script>
 </body>
 </html>
