--- a/MobileCrm/res/layout/layout_base.xml
+++ b/MobileCrm/res/layout/layout_base.xml
@@ -12,7 +12,7 @@
 		android:orientation="vertical"
 		android:layout_alignParentTop="true">
 		<TextView
-			android:id="@+id/menuTitle"
+			android:id="@+id/info"
 			android:textSize="20.0dip"
 			android:textColor="#ff3f3f"
 			android:gravity="center_vertical"
@@ -20,7 +20,6 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginRight="15.0sp" />
-
 		<TableLayout
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
@@ -32,12 +31,11 @@
 	</LinearLayout>
 
 	<ScrollView
-		android:id="@+id/main"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:layout_weight="2">
 		<LinearLayout
-			android:id="@+id/menuLayout01"
+			android:id="@+id/main"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:orientation="vertical" />
