--- a/MobileCrm/res/layout/menu_common.xml
+++ b/MobileCrm/res/layout/menu_common.xml
@@ -12,7 +12,7 @@
 		android:orientation="vertical"
 		android:layout_alignParentTop="true">
 		<TextView
-			android:id="@+id/menuTitle"
+			android:id="@+id/info"
 			android:textSize="20.0dip"
 			android:textColor="#ff3f3f"
 			android:gravity="center_vertical"
@@ -20,7 +20,6 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginRight="15.0sp" />
-
 		<TableLayout
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
@@ -32,15 +31,21 @@
 	</LinearLayout>
 
 	<ScrollView
-		android:id="@+id/main"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="fill_parent"
 		android:layout_weight="2">
-		<LinearLayout
-			android:id="@+id/menuLayout01"
+		
+		<GridView
+			android:id="@+id/main"
 			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:orientation="vertical" />
+			android:layout_height="fill_parent"
+			android:numColumns="auto_fit"
+			android:verticalSpacing="10dp"
+			android:horizontalSpacing="10dp"
+			android:columnWidth="90dp"
+			android:stretchMode="columnWidth"
+			android:gravity="center" />
+			
 	</ScrollView>
 
 
