--- a/MobileCrm/res/layout/text_image_button.xml
+++ b/MobileCrm/res/layout/text_image_button.xml
@@ -7,17 +7,17 @@
 	android:paddingBottom="5dip">
 
 	<ImageView
-		android:id="@+id/item_image"
+		android:id="@+id/image"
 		android:layout_centerHorizontal="true"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content" />
 
 	<TextView
-		android:layout_below="@id/item_image"
-		android:id="@+id/item_text"
+		android:layout_below="@id/image"
+		android:id="@+id/name"
 		android:layout_centerHorizontal="true"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:textColor="#FFFFFFFF" />
-		
+
 </RelativeLayout>
