--- a/MobileCrm/res/layout/menu_view.xml
+++ b/MobileCrm/res/layout/menu_view.xml
@@ -5,6 +5,32 @@
 	android:layout_height="fill_parent"
 	android:orientation="vertical"
 	android:background="@drawable/bg">
+
+	<LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:orientation="vertical"
+		android:layout_alignParentTop="true">
+		<TextView
+			android:id="@+id/info"
+			android:textSize="20.0dip"
+			android:textColor="#ff3f3f"
+			android:gravity="center_vertical"
+			android:paddingLeft="3.0sp"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginRight="15.0sp" />
+
+		<TableLayout
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:stretchColumns="0">
+			<View
+				android:layout_height="3dip"
+				android:background="#FF909090" />
+		</TableLayout>
+	</LinearLayout>
+
 	<ScrollView
 		android:layout_width="fill_parent"
 		android:layout_height="match_parent"
